--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
 
 <body>
 
+    <div class="main-container">
+        <div class="logo-container">
+            <div class="logo">
+                <img src="./resources/odin-lined.png" alt="The Odin Project logo" id="odin-logo">
+                <p class="logo-text">ODIN</p>
+            </div>
+            <div class="cred">
+                <p>Photo by <a href="https://unsplash.com/@haliewestphoto" target="_blank">Halie West</a> on <a
+                        href="https://unsplash.com" target="_blank">Unsplash</a></p>
+            </div>
+        </div>
+        <div class="form-container">
+            <div class="text">
+
+            </div>
+            <form action="index.html">
+                <fieldset>
+                    <legend>First Name</legend>
+                    <!-- <label for="first-name">First Name</label> -->
+                    <input type="text" id="first-name" name="first-name">
+                    <legend>Last Name</legend>
+                    <input type="text" id="last-name" name="last-name">
+                </fieldset>
+            </form>
+        </div>
+    </div>
+
 </body>
 
 </html>
