--- a/index.html
+++ b/index.html
@@ -23,17 +23,37 @@
         </div>
         <div class="form-container">
             <div class="text">
-
+                <p>This is not a real online service! You know you need something like this in your life to help you
+                    realize your deepest dreams.
+                    Sign up <em>now</em> to get started.
+                </p>
+                <p>
+                    You <em>know</em> you want to.
+                </p>
             </div>
-            <form action="index.html">
-                <fieldset>
-                    <legend>First Name</legend>
-                    <!-- <label for="first-name">First Name</label> -->
+            <div class="form">
+                <form action="index.html">
+
+                    <label for="first-name">First Name</label>
                     <input type="text" id="first-name" name="first-name">
-                    <legend>Last Name</legend>
+
+                    <label for="last-name">Last Name</label>
                     <input type="text" id="last-name" name="last-name">
-                </fieldset>
-            </form>
+
+                    <label for="email">Email</label>
+                    <input type="text" id="email" name="email">
+
+                    <label for="phone-number">Phone Number</label>
+                    <input type="text" id="phone-number" name="phone-number">
+
+                    <label for="password">Password</label>
+                    <input type="text" id="password" name="password">
+
+                    <label for="confirm-password">Confirm Password</label>
+                    <input type="text" id="confirm-password" name="confirm-password">
+
+                </form>
+            </div>
         </div>
     </div>
 
